2001-11-13  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in: Fix the macro rule to generate *.elc files.

	* w3m.el (w3m-display-hook): Add `w3m-select-buffer-update'.
	(w3m-select-buffer-name): Move the definition position to avoid
	byte-compile warning.
	(w3m-goto-url): Removed the code to update the select buffer.
	(w3m-select-buffer-update): New function.

	* w3m-proc.el (w3m-process-with-wait-handler): Adhoc workaround.
	(w3m-process-start): Fix.

2001-11-13  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-lynx-like-map): Bind `C-cC-a' as the key to call
	`w3m-switch-buffer'.
	(w3m-info-like-map): Ditto. Bind `\C-c\C-@' and `C-c\C- ' as the
	key to call `w3m-history-store-position'. Bind `C-cC-b' as the key
	to call `w3m-history-restore-position'.
	(w3m-mode): Modify doc-string.
	(w3m-select-buffer-show-this-line-and-switch): New function.
	(w3m-select-buffer-name): New internal constant.
	(w3m-select-buffer-mode-map): Bind `w' and `h' as the key to call
	`w3m-select-buffer-show-this-line-and-switch'.
	(w3m-select-buffer-mode): Modify doc-string.
	(w3m-select-buffer): Use `w3m-select-buffer-name'. If alive
	select-buffer, use it. 	Add optional argument `nomsg'.
	(w3m-select-buffer-generate-contents): If w3m-current-title is
	`<no-title>', use w3m-current-url.
	(w3m-select-buffer-show-this-line): Return selected buffer.
	(w3m-select-buffer-quit): Always pop up the w3m window when quit.
	(w3m-select-buffer-show-this-line-and-quit): Rewrite.
	(w3m-goto-url): If alive w3m-select-buffer, update it.
	(w3m-copy-buffer): If w3m-pop-up-windows is nil, use
	switch-to-buffer. Block to change w3m-select-buffer to w3m buffer,
	if w3m-pop-up-windows is t.
	(top): Add autoload of `w3m-setup-tab' and `w3m-switch-buffer'.
	(w3m-setup-menu): Call `w3m-setup-tab-menu' when
	w3m-use-tab-menubar is t.
	(w3m-mode): Remove to call `w3m-setup-tab-menu'.

	* w3m-e21.el (TOP): Remove `(require 'w3m-tabmenu)'.

	* w3m-e20.el (TOP): Ditto.

	* w3m-om.el (TOP): Ditto.
